--- a/tests/index.html
+++ b/tests/index.html
@@ -22,7 +22,7 @@
 			border-right: 1px solid rgba(255,255,255,.5);
 			text-align: center;
 			font: 600 14px Verdana, sans-serif;
-			padding: 1.5% 0;
+			line-height: 350%;
 			box-sizing: border-box;
 			text-transform: uppercase;
 			cursor: pointer;
@@ -38,6 +38,7 @@
 		<li onclick="router.push('/')" class="item">Home</li>
 		<li onclick="router.push('/settings')" class="item">Settings</li>
 		<li onclick="router.push('/results')" class="item">Results</li>
+		<li onclick="router.push('/br')" class="item">BestRecs</li>
 		<li onclick="router.push('/help')" class="item">Help</li>
 	</nav>
 	<section class="text"></section>
