Add new features

--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,7 @@
 	<title>Router Example</title>
 	<script src="../router.js"></script>
 	<script src="../route.js"></script>
+	<script src="../view.js"></script>
 	<style>
 		.menu {
 			width: 100%;
