Add example data

--- a/example/code.html
+++ b/example/code.html
@@ -4,16 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Planet</title>
 	<link rel="stylesheet" href="code.css" />
+	<script type="module" src="code.js"></script>
 </head>
 <body>
 	<section class="wrapper">
 		<header class="header">Elements of planet <span class="subtext">click to choose</span></header>
 		<section class="content">
 			<nav class="menu">
-				<a href="earth/code.html"><li class="item earth">Earth</li></a>
-				<a href="water/code.html"><li class="item water">Water</li></a>
-				<a href="air/code.html"><li class="item air">Air</li></a>
-				<a href="fire/code.html"><li class="item fire">Fire</li></a>
+				<li class="item earth">Earth</li>
+				<li class="item water">Water</li>
+				<li class="item air">Air</li>
+				<li class="item fire">Fire</li>
 			</nav>
 		</section>
 		<div class="corner-indicator"></div>
