--- a/example/water/code.html
+++ b/example/water/code.html
@@ -4,11 +4,44 @@
 	<meta charset="UTF-8">
 	<title>Planet</title>
 	<link rel="stylesheet" href="code.css" />
+	<style>
+		h1 {
+			color: red;
+			background: green;
+			margin: 0;
+		}
+		h1.caption {
+			font-weight: normal;
+		}
+	</style>
+	<script src="code.js"></script>
+	<script>
+		var x = {x: 'x'};
+		var y = {y: 'y'};
+		console.log(x, y);
+	</script>
 </head>
 <body>
+	<link rel="stylesheet" href="code.css" />
+	<style>
+		h1 {
+			color: red;
+			background: green;
+			margin: 0;
+		}
+		h1.caption {
+			font-weight: normal;
+		}
+	</style>
 	<section class="wrapper">
 		<section class="element">Water</section>
 		<div class="corner-indicator"></div>
 	</section>
+	<script src="code.js"></script>
+	<script>
+		var x = {x: 'x'};
+		var y = {y: 'y'};
+		console.log(x, y);
+	</script>
 </body>
 </html>
