Add example data

--- a/example/list/code.html
+++ b/example/list/code.html
@@ -15,6 +15,7 @@
 				<li class="item water">Water</li>
 				<li class="item air">Air</li>
 				<li class="item fire">Fire</li>
+				<!-- <a href="http://0.0.0.0:3000/example/fire"><li class="item blame">Blame</li></a> -->
 			</nav>
 		</section>
 		<div class="corner-indicator"></div>
